// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > buildAfterScreenshotOptions > should build options for native commands (no enriched data) 1`] = `
{
  "actualFolder": "/test/actual",
  "base64Image": "test-screenshot-data",
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "120.0.0",
    "deviceName": "desktop",
    "devicePixelRatio": 2,
    "formatImageName": "{tag}-{browserName}-{width}x{height}",
    "isMobile": false,
    "isTestInBrowser": false,
    "logName": "chrome",
    "name": "chrome",
    "outerHeight": NaN,
    "outerWidth": NaN,
    "platformName": "desktop",
    "platformVersion": "120.0.0",
    "screenHeight": 1080,
    "screenWidth": 1920,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "desktop",
    "isMobile": false,
    "savePerInstance": false,
  },
  "isLandscape": false,
  "isNativeContext": true,
  "platformName": "desktop",
}
`;

exports[`options > buildAfterScreenshotOptions > should build options for web commands with enriched data 1`] = `
{
  "actualFolder": "/test/actual",
  "base64Image": "test-screenshot-data",
  "disableBlinkingCursor": true,
  "disableCSSAnimation": false,
  "enableLayoutTesting": true,
  "fileName": {
    "browserName": "chrome",
    "browserVersion": "120.0.0",
    "deviceName": "desktop",
    "devicePixelRatio": 3,
    "formatImageName": "{tag}-{browserName}-{width}x{height}",
    "isMobile": false,
    "isTestInBrowser": true,
    "logName": "chrome",
    "name": "chrome",
    "outerHeight": 1000,
    "outerWidth": 1200,
    "platformName": "desktop",
    "platformVersion": "120.0.0",
    "screenHeight": 1440,
    "screenWidth": 2560,
    "tag": "test-element",
  },
  "filePath": {
    "browserName": "chrome",
    "deviceName": "desktop",
    "isMobile": false,
    "savePerInstance": false,
  },
  "hideElements": [],
  "hideScrollBars": true,
  "isLandscape": true,
  "isNativeContext": false,
  "platformName": "desktop",
  "removeElements": [],
}
`;

exports[`options > defaultOptions > should return the default options when no options are provided 1`] = `
{
  "addIOSBezelCorners": false,
  "addressBarShadowPadding": 6,
  "autoElementScroll": true,
  "autoSaveBaseline": true,
  "clearFolder": false,
  "compareOptions": {
    "blockOutSideBar": true,
    "blockOutStatusBar": true,
    "blockOutToolBar": true,
    "createJsonReportFiles": false,
    "diffPixelBoundingBoxProximity": 5,
    "ignoreAlpha": false,
    "ignoreAntialiasing": false,
    "ignoreColors": false,
    "ignoreLess": false,
    "ignoreNothing": false,
    "rawMisMatchPercentage": false,
    "returnAllCompareData": false,
    "saveAboveTolerance": 0,
    "scaleImagesToSameSize": false,
  },
  "disableBlinkingCursor": false,
  "disableCSSAnimation": false,
  "enableLayoutTesting": false,
  "enableLegacyScreenshotMethod": false,
  "formatImageName": "{tag}-{browserName}-{width}x{height}-dpr-{dpr}",
  "fullPageScrollTimeout": 1500,
  "hideScrollBars": true,
  "isHybridApp": false,
  "savePerInstance": false,
  "tabbableOptions": {
    "circle": {
      "backgroundColor": "#ff0000",
      "borderColor": "#000",
      "borderWidth": 1,
      "fontColor": "#fff",
      "fontFamily": "Arial",
      "fontSize": 10,
      "showNumber": true,
      "size": 10,
    },
    "line": {
      "color": "#000",
      "width": 1,
    },
  },
  "toolBarShadowPadding": 6,
  "userBasedFullPageScreenshot": false,
  "waitForFontsLoaded": true,
}
`;

exports[`options > defaultOptions > should return the provided options when options are provided 1`] = `
{
  "addIOSBezelCorners": false,
  "addressBarShadowPadding": 1,
  "autoElementScroll": true,
  "autoSaveBaseline": true,
  "clearFolder": false,
  "compareOptions": {
    "blockOutSideBar": true,
    "blockOutStatusBar": true,
    "blockOutToolBar": true,
    "createJsonReportFiles": true,
    "diffPixelBoundingBoxProximity": 123,
    "ignoreAlpha": true,
    "ignoreAntialiasing": true,
    "ignoreColors": true,
    "ignoreLess": true,
    "ignoreNothing": true,
    "rawMisMatchPercentage": true,
    "returnAllCompareData": true,
    "saveAboveTolerance": 12,
    "scaleImagesToSameSize": true,
  },
  "disableBlinkingCursor": true,
  "disableCSSAnimation": true,
  "enableLayoutTesting": false,
  "enableLegacyScreenshotMethod": false,
  "formatImageName": "{foo}-{bar}",
  "fullPageScrollTimeout": 12345,
  "hideScrollBars": true,
  "isHybridApp": false,
  "savePerInstance": true,
  "tabbableOptions": {
    "circle": {
      "backgroundColor": "backgroundColor",
      "borderColor": "borderColor",
      "borderWidth": 123,
      "fontColor": "fontColor",
      "fontFamily": "fontFamily",
      "fontSize": 321,
      "showNumber": false,
      "size": 567,
    },
    "line": {
      "color": "color",
      "width": 987,
    },
  },
  "toolBarShadowPadding": 1,
  "userBasedFullPageScreenshot": false,
  "waitForFontsLoaded": true,
}
`;

exports[`options > methodCompareOptions > should not return the method options when no options are provided 1`] = `{}`;

exports[`options > methodCompareOptions > should return the provided options when options are provided 1`] = `
{
  "blockOut": [
    {
      "height": 1,
      "width": 2,
      "x": 3,
      "y": 4,
    },
  ],
  "ignoreAlpha": true,
  "ignoreAntialiasing": true,
  "ignoreColors": true,
  "ignoreLess": true,
  "ignoreNothing": true,
  "rawMisMatchPercentage": true,
  "returnAllCompareData": true,
  "saveAboveTolerance": 12,
  "scaleImagesToSameSize": true,
}
`;

exports[`options > screenMethodCompareOptions > should not return the screen method options when no options are provided 1`] = `{}`;

exports[`options > screenMethodCompareOptions > should return the provided options when options are provided 1`] = `
{
  "blockOut": [
    {
      "height": 1,
      "width": 2,
      "x": 3,
      "y": 4,
    },
  ],
  "blockOutSideBar": false,
  "blockOutStatusBar": false,
  "blockOutToolBar": false,
  "ignoreAlpha": true,
  "ignoreAntialiasing": true,
  "ignoreColors": true,
  "ignoreLess": true,
  "ignoreNothing": true,
  "rawMisMatchPercentage": true,
  "returnAllCompareData": true,
  "saveAboveTolerance": 12,
  "scaleImagesToSameSize": true,
}
`;
